--- a/static/styles.css
+++ b/static/styles.css
@@ -1,16 +1,124 @@
+/*----------------------------------Header Styles-------------------------------------*/
 
-/*----------------------------------Homepage Styles-------------------------------------*/
-#Logo_Image{
-    height: 200px;
+
+/*-----------Announcement bar----------------*/
+.announcement-bar{
+    display: flex;
+    justify-content: space-between; /* pushes left & right apart */
+    align-items: center; /* vertically center the text */
+    background-color: #EEDFD2; /* soft blush */
+    color: #555555; /* warm gray text */
+    font-family: 'Helvetica', sans-serif;
+    font-size: 12px;
+    padding: 8px 20px;
+    position: relative;
 }
-.Homepage{
-    height: 100vh;
-    background-color: beige;
+
+#address_area{
+    text-align: right;
+    margin: 30px;
+}
+/*-----------------Top Header------------------*/
+
+.top_header{
+    position: sticky;
+    top: 0;
+    z-index: 1000; /* stays above other content */
+    height: 80px;
+    padding-top: 5px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    background: #D8C3C0;
+    font-family: "Georgia", serif; /* classy serif */
+    color: #3d3d4f; /*charcoal */
+
+}
+#Celestia_Botanica_Title{
+    text-align: center;
+    font-size: 30px;
+
+}
+#city_title{
+    text-align: center;
+    padding-top: 0px;
+    margin-top: 0px;
+    font-size: 15px;
+}
+
+.socials{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding-right: 20px;
+    gap: 10px;
+
+}
+
+.socials svg {
+
+
+}
+
+
+/*----------------------------------Nav Bar----------------------------------------------*/
+.nav_bar{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding-left: 20px;
+    gap: 20px;
+
+}
+/*----------------------------------Homepage Styles-------------------------------------*/
+
+
+
+/*----------------------------------Hero Styles-------------------------------------*/
+
+.hero_parent img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: 40% bottom;
+  display: block;
+}
+.hero_parent {
+  position: relative;
+  height: 85vh;
+  overflow: hidden;
+}
+.hero_parent::after {
+  content: "";
+  position: absolute;
+  top: 0; left: 0; right: 0; bottom: 0;
+  background: linear-gradient(to bottom, rgba(255,255,255,0.2), rgba(255,255,255,0));
+}
+
+#hero_text {
+  position: absolute;
+  top: 50%;
+  right: 5%;
+  transform: translateY(-70%);
+  color: #3d3d4f;
+  text-align: right;
+  z-index: 10;         /* sits above the image and overlay */
+}
+
+#homepage_shop_button{
+    border-radius: 10px;
+    background: #EEDFD2;
+    border-color: none;
+    height: 50px;
+    width: 300px;
+    font-weight: bold;
+    font-size: 16;
+    color: #3d3d4f; /*charcoal */
+    margin-top: 10px;
 
 }
 
 /*-----------------------------------Footer Styles------------------------------------*/
 .footer{
     background-color: #858FB4;
-    height = 50px;
+    height : 50px;
 }
