--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
-
+  {% include "header.html"%}
   {% block content %}{% endblock %}
   {% include "footer.html" %}
 
