--- a/templates/index.html
+++ b/templates/index.html
@@ -5,16 +5,7 @@
 {% block content %}
 
 <div class="Homepage">
-    <div class="hero_parent">
-        <img src="static/images/single_flower_hero_image.jpg">
-
-        <div id="hero_text">
-            <h1>Flowers Are Love Made Visible</h1>
-            <h5>Artisanal arrangements crafted with elegance</h5>
-            <button id="homepage_shop_button">Discover your perfect bouquet</button>
-        </div>
-
-    </div>
+    {% include "hero.html"%}
     <h3>Hero</h3>
     <h3>Categories</h3>
     <h3>Contact</h3>
