--- a/templates/hero.html
+++ b/templates/hero.html
@@ -3,8 +3,9 @@
         <img src="static/images/single_flower_hero_image.jpg">
 
         <div id="hero_text">
-            Flowers Are Love<br> Made Visible
+            For Moments  Worth<br>Remembering
             <p>Artisanal arrangements crafted with elegance</p>
+            <p>Delivered to your door or ready for pickup</p>
             <button id="homepage_shop_button"><b>DISCOVER YOUR PERFECT BOUQUET</b></button>
         </div>
 
