--- a/templates/index.html
+++ b/templates/index.html
@@ -6,11 +6,36 @@
 
 <div class="Homepage">
     {% include "hero.html"%}
-    <h3>Hero</h3>
-    <h3>Categories</h3>
-    <h3>Contact</h3>
-    <h3>About Me</h3>
-    <h3>Testimonials</h3>
+    <!--  Categories   -->
+    <h3 id="categories_title">Curated by Occasion</h3>
+    <div class="categories">
+        <div id="category_1">Luxury Arrangements</div>
+        <div id="category_2">Seasonal Collections</div>
+        <div id="category_3">Occasions & Celebrations <img src="static/images/occasions.jpg"></div>
+    </div>
+    <!--  Other Sections -->
+    <br>
+    <br>
+    <br>
+<div class="about_celestia_botanica">
+    <div id="about-image">
+        <img src="static/images/about_white_flowers.jpg" alt="White flower arrangement">
+    </div>
+<div id="about-text">
+    <h3>The Celestia Botanica Difference</h3>
+    <p>
+        At Celestia Botanica, we believe flowers should feel as special as the moments they celebrate.
+        That’s why we partner with local growers to bring you arrangements that are fresh, thoughtful, and uniquely designed.
+        Our designs are made to feel personal, intentional, and unforgettable.
+        We carefully select each stem for quality and character, ensuring that every arrangement not only looks beautiful but also lasts longer.
+        We take pride in creating pieces that make a lasting impression long after the flowers are gone.
+        When you choose Celestia Botanica, you’re supporting local artisans, celebrating sustainable practices, and choosing a floral experience that feels truly one-of-a-kind.
+    </p>
+</div>
+
+</div>
+
+
 
 
 </div>
