Added category images

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,13 +6,25 @@
 
 <div class="Homepage">
     {% include "hero.html"%}
+
+
     <!--  Categories   -->
-    <h3 id="categories_title">Curated by Occasion</h3>
-    <div class="categories">
-        <div id="category_1">Luxury Arrangements</div>
-        <div id="category_2">Seasonal Collections</div>
-        <div id="category_3">Occasions & Celebrations <img src="static/images/occasions.jpg"></div>
+<h3 id="categories_title">Curated by Occasion</h3>
+<div class="categories">
+    <div id="category_1">
+        <img src="static/images/yellow_bouquet.jpg" alt="Category">
+        <div class="overlay-text">Luxury Arrangements</div>
     </div>
+    <div id="category_2">
+        <img src="static/images/fall_flowers.jpg" alt="Category">
+        <div class="overlay-text">Seasonal Collections</div>
+    </div>
+    <div id="category_3">
+        <img src="static/images/occasions.jpg" alt="Category">
+        <div class="overlay-text">Occasions & Celebrations</div>
+    </div>
+</div>
+
     <!--  Other Sections -->
     <br>
     <br>
