--- a/static/styles.css
+++ b/static/styles.css
@@ -145,37 +145,51 @@ body {
 
 }
 /*-----------------------------------Category Styles------------------------------------*/
-
 .categories{
     display: flex;
     justify-content: space-around;
-
 }
-
-.categories div{
-    height: 275px;
-    width: 350px;
-    border: 5px solid #3d3d4f;
-    overflow: hidden;
-    box-sizing: border-box; /*  includes border in total size */
-    text-align:center;
-}
-
-.categories img{
-    display: inline-block;
-    height: 100%;
-    width: 50%;
-    object-fit: cover;
-    display: block;
-}
-
 #categories_title{
-    color: #3d3d4f;
+    color: #4a3b22;
     text-align: center;
     margin-top: 30px;
     margin-bottom: 50px;
-
 }
+.categories div{
+    position: relative;
+    height: 275px;
+    width: 350px;
+    border: 5px solid #c8b3a8;
+    border-radius: 5px;
+    overflow: hidden;
+    box-sizing: border-box; /*  includes border in total size */
+}
+.categories img{
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    display: block;
+}
+.categories div .overlay-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    text-align: center;
+    width: 90%;
+    font-size: 1.2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
+
+
 /*----------------------------------About Celestia_Botanica Styles------------------------------------*/
 .about_celestia_botanica {
     display: flex;
