Hero zoom feature applied

--- a/templates/header.html
+++ b/templates/header.html
@@ -5,25 +5,29 @@
     Locally sourced, hand-arranged flowers — <b>Freshly delivered to your door</b>
   </div>
   <div class="announcement-right">
-      1234 Palm Tree Lane, Orlando, FL 32801 <b>+1 (877)393-4448</b>
+      1234 Palm Tree Lane, Tampa, FL 32801 <b>+1 (877) 393-4448</b>
   </div>
 </div>
 
 <!--Logo Header-->
 <div class="top_header">
     <!----Nav Bar---->
-    <div class="nav_bar">
-        <div>Home</div>
-        <div>Shop</div>
-        <div>Occasions</div>
-        <div>Gallery</div>
-        <div>About</div>
-        <div>Contact</div>
-    </div>
+<div class="nav_bar">
+    <div><a href="/" class="nav_link">HOME</a></div>
+    <div><a href="#" class="nav_link">SHOP</a></div>
+    <div><a href="#" class="nav_link">OCCASIONS</a></div>
+    <div><a href="#" class="nav_link">GALLERY</a></div>
+    <div><a href="#" class="nav_link">ABOUT</a></div>
+    <div><a href="#" class="nav_link">CONTACT</a></div>
+</div>
+
     <div id="Celestia_Botanica_Title">
-        Celestia Botanica
-        <div id="city_title">Tampa</div>
+    <a href="/" class="title_link">
+        CELESTIA BOTANICA
+        <div id="city_title">TAMPA</div>
+    </a>
     </div>
+
     <div class="socials">
 <!-- Instagram -->
       <a href="https://www.instagram.com/celestiabotanicaflorist/?igsh=NW8xMmpmdDYwbGI0&utm_source=qr#" aria-label="Instagram">
