Fixed distortion on category images

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,18 +9,18 @@
 
 
     <!--  Categories   -->
-<h3 id="categories_title">Curated by Occasion</h3>
+    <div id="categories_title"><a href="#">For Every Moment</a></div>
 <div class="categories">
     <div id="category_1">
-        <img src="static/images/yellow_bouquet.jpg" alt="Category">
-        <div class="overlay-text">Luxury Arrangements</div>
+        <img src="static/images/cropped_red_roses.jpg" alt="Category">
+        <div class="overlay-text"><a href="#">Luxury Arrangements</a></div>
     </div>
     <div id="category_2">
         <img src="static/images/fall_flowers.jpg" alt="Category">
         <div class="overlay-text">Seasonal Collections</div>
     </div>
     <div id="category_3">
-        <img src="static/images/occasions.jpg" alt="Category">
+        <img src="static/images/wedding_bouquet.png" alt="Category">
         <div class="overlay-text">Occasions & Celebrations</div>
     </div>
 </div>
