--- a/templates/header.html
+++ b/templates/header.html
@@ -14,11 +14,11 @@
     <!----Nav Bar---->
 <div class="nav_bar">
     <div><a href="/" class="nav_link">HOME</a></div>
-    <div><a href="#" class="nav_link">SHOP</a></div>
-    <div><a href="#" class="nav_link">OCCASIONS</a></div>
-    <div><a href="#" class="nav_link">GALLERY</a></div>
-    <div><a href="#" class="nav_link">ABOUT</a></div>
-    <div><a href="#" class="nav_link">CONTACT</a></div>
+    <div><a href="/shop" class="nav_link">SHOP</a></div>
+    <div><a href="/occasions" class="nav_link">OCCASIONS</a></div>
+    <div><a href="/gallery" class="nav_link">GALLERY</a></div>
+    <div><a href="/about" class="nav_link">ABOUT</a></div>
+    <div><a href="/contact" class="nav_link">CONTACT</a></div>
 </div>
 
     <div id="Celestia_Botanica_Title">
