--- a/static/styles.css
+++ b/static/styles.css
@@ -112,9 +112,18 @@
 body {
   font-family: "Playfair Display", serif;
   background-color: #f3e7d3;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+
 }
-
-
+html, body {
+  height: 100%;
+  margin: 0;
+}
+.main-content {
+  flex: 1;
+}
 /*----------------------------------Hero Styles-------------------------------------*/
 .hero_parent {
   position: relative;
@@ -304,16 +313,22 @@ body {
 
 #about-text p {
     font-size: 1rem;               /* ~16px */
-    line-height: 1.6;
+    line-height: 1.8;
     margin: 0 30px;
     margin-bottom: 8px;
 }
 
+/*-----------------------------------About Page------------------------------------*/
 
+.about_page{
+    height:
 
+}
 /*-----------------------------------Footer Styles------------------------------------*/
 
 .footer {
+
+  width: 100%;
   display: flex;
   justify-content: space-around;
   align-items: flex-start;
@@ -321,7 +336,7 @@ body {
   color:  #5a3e2b;
   font-family: "Playfair Display", serif;
   padding: 40px 60px;
-  border-top: 2px solid #c8b3a8;
+  border-top: 2px solid #5a3e2b;
 }
 
 .footer-column {
