--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,9 @@
 </head>
 <body>
   {% include "header.html"%}
-  {% block content %}{% endblock %}
+  <div class="main-content">
+    {% block content %}{% endblock %}
+  </div>
   {% include "footer.html" %}
 
 </body>
