--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 
 
     <!--  Categories   -->
-    <div id="categories_title"><a href="#">For Every Moment</a></div>
+    <div id="categories_title"><a href="/occasions">For Every Moment</a></div>
 <div class="categories">
     <div id="category_1">
         <img src="static/images/cropped_red_roses.jpg" alt="Category">
@@ -28,22 +28,25 @@
     <!--  Other Sections -->
     <br>
     <br>
+    <div>Trending Bouquets(bouquets on carousel</div>
     <br>
+
+
 <div class="about_celestia_botanica">
     <div id="about-image">
         <img src="static/images/about_white_flowers.jpg" alt="White flower arrangement">
     </div>
-<div id="about-text">
-    <h3>The Celestia Botanica Difference</h3>
-    <p>
-        At Celestia Botanica, we believe flowers should feel as special as the moments they celebrate.
-        That’s why we partner with local growers to bring you arrangements that are fresh, thoughtful, and uniquely designed.
-        Our designs are made to feel personal, intentional, and unforgettable.
-        We carefully check each stem for quality, ensuring that every arrangement not only looks beautiful but also lasts longer.
-        We take pride in creating pieces that make a lasting impression long after the flowers are gone.
-        When you choose Celestia Botanica, you’re supporting local artisans, celebrating sustainable practices, and choosing a floral experience that feels truly one-of-a-kind.
-    </p>
-</div>
+    <div id="about-text">
+        <h3>The Celestia Botanica Difference</h3>
+        <p>
+            At Celestia Botanica, we believe flowers should feel as special as the moments they celebrate.
+            That’s why we partner with local growers to bring you arrangements that are fresh, thoughtful, and uniquely designed.
+            Our designs are made to feel personal, intentional, and unforgettable.
+            We carefully check each stem for quality, ensuring that every arrangement not only looks beautiful but also lasts longer.
+            We take pride in creating pieces that make a lasting impression long after the flowers are gone.
+            When you choose Celestia Botanica, you’re supporting local artisans, celebrating sustainable practices, and choosing a floral experience that feels truly one-of-a-kind.
+        </p>
+    </div>
 
 </div>
 
