--- a/templates/about.html
+++ b/templates/about.html
@@ -8,10 +8,10 @@
 {% block content %}
 
 <div class="about_page">
-    <div id="about_page_title"><h1>About Celestia Botanica</h1></div>
+  <div id="about_page_title"><h1>About Celestia Botanica</h1></div>
   <div id="about_page_p">
     <section class="about">
-      <h1 class="visually-hidden">About Celestia Botanica</h1>
+
 
       <h2>Our Story</h2>
       <p>Hi, I’m Ramish, and I started <strong>Celestia Botanica</strong> here in <strong>Tampa, Florida</strong> because I’ve always believed flowers have a way of making everyday life a little more beautiful. I wanted to create a space where people could enjoy elegant, thoughtfully designed arrangements without feeling like luxury was out of reach.</p>
@@ -30,7 +30,7 @@
 
       <p>To see more of our work, visit our <a href="/gallery">gallery of floral arrangements</a> or <a href="/contact">get in touch</a> to start planning your order today.</p>
 
-      <img src="/static/images/about-flowers.jpg" alt="Elegant white and blush floral arrangement by Celestia Botanica in Tampa" class="about_image" />
+      <img src="/static/images/beige_bouquet.jpg" alt="Elegant white floral arrangement by Celestia Botanica in Tampa" class="about_image" />
     </section>
   </div>
 </div>
