--- a/templates/shop.html
+++ b/templates/shop.html
@@ -3,6 +3,11 @@
 
 {% block content %}
 
-Shop
+<div class="product_layout">
+    <div class="product_image"><img src="static/images/red_roses.jpg"></div>
+    <div class="product_title">Title</div>
+    <div class="product_price">$1.95</div>
+
+</div>
 
 {% endblock %}
